2010-10-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15880: htmlArea RTE: Context menu not working in TYPO3 4.4.3 and 4.5-dev
	* Updated htmlArea RTE version to 2.0.5

2010-09-30  Francois Suter  <francois@typo3.org>

	* Fixed bug #15639: Scheduler: Add missing classes and interface to autoload registry (Thanks to Marcus Krause)

2010-09-30  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #12889: fe_adminLib.inc usages deprecated function split() (Thanks to Steffen Kamper and Ismaël Bidau)

2010-09-28  Benjamin Mack  <benni@typo3.org>

	* Release of TYPO3 4.4.3

2010-09-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.1.7 to 1.1.8

2010-09-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15820: htmlArea RTE: Failure to install AllowClipboard Helper extension raises js error
	* Fixed bug #15730: htmlArea RTE: Problem editing a new list entry in list of items with inline markup
	* Fixed bug #15818: htmlArea RTE: Erratic behaviour of toolbar in some browsers

2010-09-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #15797: htmlArea RTE: Problem in Firefox inserting non-breaking space with Insert Special Character dialogue

2010-09-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15430: htmlArea RTE: Text not editable after pasting with server-based cleaning
	* Follow-up to bug #15430: htmlArea RTE: Text not editable after pasting with server-based cleaning
	* Fixed bug #15797: htmlArea RTE: Problem in Firefox inserting non-breaking space with Insert Special Character dialogue
	* Fixed bug #15749: htmlArea RTE: Firefox shows &amp; in external links with query string
	* Fixed bug #15512: htmlArea RTE: Initialization in flexforms broken with TYPO3 4.4
	* Follow-up to bug #15622: t3lib_TCEforms_inline registers superfluous nested level when renderFieldsOnly is set
	* Fixed bug #15569: htmlArea RTE: RTE not loading when ExtJS 3.2.1 is used

2010-09-25  Steffen Gebert  <steffen@steffen-gebert.de>
